# meteoappDjango

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gen_data.py  pyproject.toml
categories/: models.py
categories/migrations/: 0001_initial.py
courses/: admin.py  autocomplete_view.py  forms.py  models.py  urls.py  utils.py  views.py
courses/migrations/: 0001_initial.py  0002_course_ects.py  0002_initial.py  0003_alter_block_course.py  0003_schedule_name.py  0004_alter_timetable_day.py  0004_auto_20220403_1103.py  0005_auto_20220402_1828.py  0006_auto_20220402_2056.py
courses/templates/: charts.html  course.html  course_list.html  schedule.html
courses/templatetags/: course_form.py  sidebar.py
frontend/startbootstrap-sb-admin-2-gh-pages/: index.html  login.html
frontend/startbootstrap-sb-admin-2-gh-pages/css/: sb-admin-2.min.css
hackadoo/: asgi.py  settings.py  urls.py  views.py  wsgi.py
hackadoo/assets/css/: my.css  sb-admin-2.css
hackadoo/templates/: 404.html  base.html  blank.html  buttons.html  cards.html  charts.html  index.html  messages.html  tables.html
hackadoo/templates/includes/: qr-code.html  sidebar.html  topbar.html
hackadoo/templatetags/: user_courses.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_parameters.py  0002_auto_20220402_1954.py  0003_rename_participation_to_the_course_studenttocourse_attended.py  0004_studenttocourse_study_time.py
users/templates/: login.html  register.html
(+1 files in other folders)
