[tool.poetry]
name = "hackadoo"
version = "0.1.0"
description = "An e-learning platform centered on Gamification"
authors = ["Minigrim0, ZoroxaT, Nicoflo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7,<3.10"
Django = "^3.2"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
django-autocomplete-light = "^3.9.4"
ics = "^0.7"

[tool.poetry.dev-dependencies]
pyproject-flake8 = "^0.0.1-alpha.3"
rope = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
